# muxly

./: .gitignore  AGENTS.md  README.md  build.zig  build.zig.zon
doc/: README.md  architecture.md  ffi.md  muxml.md  protocol.md  tmux-backend.md  tom.md  trine.md  viewer-architecture.md
docs/: architecture.md  demos.md  ffi.md  keybinding-model.md  muxml.md  neovim-integration.md  platform-matrix.md  protocol.md  terminal-artifacts.md  tmux-backend.md  tom.md  trine.md  viewer-architecture.md
examples/: README.md
examples/artifacts/: README.md  captured-surface.txt  captured-text.txt
examples/c/: basic_client.c
examples/guided-tour/: README.md  main.zig
examples/python/: basic_client.py
examples/tty/: README.md
examples/zig/: basic_client.zig
include/: muxly.h
phased-planning/: README.md  changelog.md  done.md  phase-1-foundation-and-protocol.md  phase-2-tmux-sources-and-views.md  phase-3-library-viewer-cli-and-bindings.md  phase-3-ordinary-clients-and-bindings.md  phase-4-control-mode-and-state-recovery.md  phase-5-keybindings-menu-nvim.md  phase-6-terminal-capture-and-persistence.md
scripts/: run_artifact_examples.py  run_binding_example.py  run_binding_examples.py  run_with_timeout.py  test_tmux_env.py
src/: muxly.zig
src/adapters/: nvim_bridge.zig  nvim_protocol.zig
src/cli/: admin_generate.zig  args.zig  client.zig  format.zig  main.zig  target_arg.zig
src/core/: capabilities.zig  conversation_broker.zig  document.zig  errors.zig  ids.zig  json.zig  (+10 more)
tools/transport_bridge/: Cargo.toml  backend.py
tools/transport_bridge/src/: main.rs
(+118 files in other folders)
