[package]
name = "muxly-transport-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
h2 = "0.4"
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
wtransport = "0.7"
