[package]
name = "muxly-transport-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
h2 = "0.4"
http = "1.0"
libc = "0.2"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pki-types = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
wtransport = "0.7"
